--- a/w09/AndroidManifest.xml
+++ b/w09/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <manifest>
 	<uses-permission android:name="android.permission.READ_PHONE_STATE">
 </manifest>
